<resources>
    <string name="app_name">Music_Download6_Ms3</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_download">Download</string>
    <string name="title_playlist">Playlist</string>
    <string name="title_setting">Setting</string>
    <string name="music">MUSIC</string>
    <string name="downloader">DOWNLOADER</string>
    <string name="top_rating">Top Rating</string>
    <string name="more">More</string>
    <string name="top_listened">Top Listened</string>
    <string name="top_download">Top Download</string>
    <string name="genres">Genres</string>
    <string name="loren_suppppppp">Loren Suppppppp</string>
    <string name="play_now">Play Now</string>
    <string name="_1">1</string>
    <string name="dubstep">Dubstep</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="now_playing">Now Playing</string>
    <string name="_01_51">01:51</string>
    <string name="playlist">Playlist</string>
    <string name="favorite_songs">Favorite Songs</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="download_song">Download Song</string>
    <string name="favorites_song">Favorites Song</string>
    <string name="create_new_playlist">Create new playlist</string>
    <string name="enter_playlist_name">Enter Playlist Name</string>
    <string name="create">Create</string>
    <string name="morning_vibe">Morning Vibe</string>
    <string name="play_all">Play All</string>
    <string name="rename_playlist">Rename Playlist</string>
    <string name="delete_playlist">Delete Playlist</string>
    <string name="done">Done</string>
    <string name="enter_name_playlist">Enter name playlist</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="enjoy_the_best_music_experience">Enjoy the Best Music Experience</string>
    <string name="upgrade_to_premium">Upgrade to Premium</string>
    <string name="upgrade_now">Upgrade Now</string>
    <string name="rating_app">Rating App</string>
    <string name="remove_song_from_playlist">Remove Song from Playlist</string>
    <string name="download_manager">DOWNLOAD MANAGER</string>
    <string name="set_as_ringtone">Set as Ringtone</string>
    <string name="remove_downloaded_song">Remove Downloaded Song</string>
    <string name="remove_download">Remove download</string>
    <string name="pause_downloading">Pause downloading</string>
    <string name="feedback">Feedback</string>
    <string name="privacy_terms"><![CDATA[Privacy & Terms]]></string>
    <string name="share_with_friend">Share with Friend</string>
</resources>