<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cstrTopRating"
    android:layout_marginEnd="10dp"
    android:background="@drawable/custom_shape_of_item_top_rating">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvImgTopRating"
        android:layout_width="137dp"
        android:layout_height="137dp"
        app:cardBackgroundColor="@android:color/transparent"
        android:layout_marginTop="12dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivTopRating"
            android:src="@mipmap/ic_launcher"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/lnTopRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_shape_tl_of_top_1_rating"
        android:translationZ="3dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/tvTopRating"
            android:text="@string/_1"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="7dp"
            android:layout_marginStart="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvNameSongTopRating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="11dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="@string/loren_suppppppp"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:textStyle="bold"

        app:layout_constraintTop_toBottomOf="@id/cvImgTopRating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/cvImgTopRating"/>

    <TextView
        android:id="@+id/tvNameSingerTopRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="11dp"
        android:text="@string/loren_suppppppp"
        android:textColor="#b2b3b7"
        android:textSize="12sp"

        app:layout_constraintTop_toBottomOf="@id/tvNameSongTopRating"
        app:layout_constraintStart_toStartOf="parent"/>

    <View
        android:id="@+id/vLineTopRating"
        android:layout_width="154dp"
        android:layout_height="1dp"
        android:background="#252B30"
        android:layout_marginTop="11dp"

        app:layout_constraintTop_toBottomOf="@id/tvNameSingerTopRating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvPlayNowTopRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_now"
        android:textColor="#01DCC2"
        android:textSize="12sp"
        android:layout_marginStart="11dp"

        app:layout_constraintBottom_toBottomOf="@id/ivPlayTopRating"
        app:layout_constraintTop_toTopOf="@id/ivPlayTopRating"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/ivPlayTopRating"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/play_top_rating"
        android:layout_marginEnd="10dp"

        app:layout_constraintTop_toBottomOf="@+id/vLineTopRating"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>